modules/gdscript/tests/scripts/parser/errors/multiple_number_separators.gd
func test():
	# Number separators may not be placed right next to each other.
	var __ = 1__23
